# opencraft

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix
opencraft/: Cargo.toml  build.rs
opencraft/benches/: benchmarks.rs
opencraft/pkg/: index.html
opencraft/src/: app.rs  camera.rs  core.rs  game.rs  main.rs  platform.rs  renderer.rs  resources.rs  text.rs  windowing.rs
opencraft/src/core/: math.rs  type_conversions.rs
opencraft/src/core/math/: aligned_box3.rs  angle.rs  bivec3.rs  clamp.rs  mat4.rs  rotor3.rs  segment3.rs  vec2.rs  vec3.rs
opencraft/src/platform/: desktop.rs  web.rs
opencraft/src/platform/desktop/: entry.rs
opencraft/src/platform/web/: entry.rs
opencraft/src/shaders/: crosshair.wgsl  cube.wgsl  cube_outline.wgsl  fullscreen_copy.wgsl  simple.wgsl  skybox.wgsl  text.wgsl
opencraft/src/windowing/: cursor_lock.rs  fullscreen.rs
