[package]
name = "opencraft"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["backtrace", "std"] }
derive_more = { version = "2.0.1", default-features = false, features = ["add", "add_assign", "mul", "mul_assign", "not"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
lazy_static = { version = "1.5.0", default-features = false }
pollster = { version = "0.4.0", default-features = false }
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl"] }
winit = { version = "0.29.15", default-features = false, features = ["rwh_06", "x11"] }
zerocopy = { version = "0.8.27", default-features = false, features = ["derive"] }

[build-dependencies]
omnicopy_to_output = { version = "0.3.0", default-features = false }
